--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -65,11 +65,11 @@
             <com.mapbox.mapboxsdk.maps.MapView
                 android:id="@+id/mapview"
                 android:layout_width="fill_parent"
-                android:layout_height="600dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 mapbox:style_url="@string/style_mapbox_streets"
-                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"/>
+                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"
+                android:layout_height="500dp" />
 
 
             <Button
@@ -307,6 +307,51 @@ android:layout_marginLeft="1dp"
         android:layout_toEndOf="@id/SValue3"
         android:layout_alignBottom="@id/SValue3"/>
 
+    <Button
+        android:text="4"
+        android:id="@+id/grabsampler_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="3"
+        android:id="@+id/grabsampler_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/grabsampler_4"
+        android:layout_alignBottom="@+id/grabsampler_4"
+        android:layout_toStartOf="@+id/grabsampler_4" />
+
+    <Button
+        android:text="2"
+        android:id="@+id/grabsampler_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/grabsampler_3"
+        android:layout_alignBottom="@+id/grabsampler_3"
+        android:layout_toStartOf="@+id/grabsampler_3" />
+
+    <Button
+        android:text="1"
+        android:id="@+id/grabsampler_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/grabsampler_2"
+        android:layout_alignBottom="@+id/grabsampler_2"
+        android:layout_toStartOf="@+id/grabsampler_3"
+        android:layout_marginEnd="69dp" />
+
+    <TextView
+        android:text="Grab Sampler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView9"
+        android:layout_above="@+id/grabsampler_3"
+        android:layout_toStartOf="@+id/grabsampler_4"
+        android:layout_marginEnd="15dp" />
 
     <!--android:textSize="18dp"-->
 
