added option for resetting sampler, needs to be finished/implemented on server

--- a/app/src/main/res/menu/dropdownmenu.xml
+++ b/app/src/main/res/menu/dropdownmenu.xml
@@ -41,10 +41,13 @@
         android:title="Preferences"
        />
 
-
     <item
         android:id="@+id/GrabSampler"
         android:title="GrabSampler" />
+
+    <item
+        android:id="@+id/GrabSamplerReset"
+        android:title="Reset Sampler" />
 
 
 </menu>
