--- a/app/src/main/res/layout/servertest.xml
+++ b/app/src/main/res/layout/servertest.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/iptest"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="0.22"
         android:text="TextView" />
 
