--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -380,6 +380,14 @@ android:layout_marginLeft="1dp"
         android:layout_above="@+id/textView9"
         android:layout_toStartOf="@+id/textView9" />
 
+    <TextView
+        android:id="@+id/winchHeight"
+        android:text="Winch Height: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/sensorPodAdd" />
+
     <!--android:textSize="18dp"-->
 
 </RelativeLayout>
