--- a/app/src/main/res/menu/dropdownmenu.xml
+++ b/app/src/main/res/menu/dropdownmenu.xml
@@ -1,4 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent">
 
@@ -11,11 +12,9 @@
     <item
         android:id="@+id/vector"
         android:title="Vector Map" />
-
     <item
         android:id="@+id/three"
         android:title="Set Home"/>
-
     <item
         android:id="@+id/four"
         android:title="Go Home"/>
@@ -30,16 +29,13 @@
         android:title="Load Waypoints" />
     <item
         android:id="@+id/loadWaypointFileButton"
-        android:title="Load Waypoint File"
-        />
-
-    <!--<item-->
-        <!--android:id="@+id/updateRate"-->
-        <!--android:title="Update Command Rate" />-->
+        android:title="Load Waypoint File" />
+    <item
+        android:id="@+id/snooze_alarms_button"
+        android:title="Snooze Alarms" />
     <item
         android:id="@+id/preferences"
-        android:title="Preferences"
-       />
+        android:title="Preferences" />
 
 
 
