Shifted GUI layout temporarily. Added spinner to select which boat you are controlling.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="black">#000000</color>
     <color name="asdf">#339900</color>
     <color name="cyan">#0080FF</color>
+    <color name="background_holo_dark">#ff000000</color>
+    <color name="background_holo_light">#fff3f3f3</color>
 </resources>
