--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -12,40 +12,24 @@
         android:id="@+id/controlScreenEnter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
+        android:layout_weight="5"
         android:gravity="center_horizontal|center_vertical"
-        android:text="TeleOp Panel"
-        android:textSize="25dp"
-        android:layout_weight = "5"
-        android:layout_alignParentTop="true" />
-
-    <TextView
-        android:id="@+id/printIpAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="IP Address:"
-        android:layout_below="@+id/controlScreenEnter"
-        android:textColor="@color/green"
-        android:background="@color/cyan"/>
-
+        android:textSize="25dp"/>
 
 
     <LinearLayout
-
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_width="180dp"
-        android:layout_height="310dp"
-        android:paddingTop="15dp"
-        android:id="@+id/relativeLayout_sensor"
+        android:id="@+id/relativeLayout_paths"
+        android:layout_width="150dp"
+        android:layout_height="275dp"
+        android:layout_above="@+id/relativeLayout_control"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/switchviewbutton"
         android:background="@drawable/border"
         android:orientation="vertical"
-        android:layout_above="@+id/mapinfo">
-
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="15dp">
 
 
     </LinearLayout>
@@ -55,9 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_weight="0.5"
-        android:layout_below="@+id/printIpAddress"
-        android:layout_toRightOf="@+id/relativeLayout_sensor"
-        android:layout_toEndOf="@+id/relativeLayout_sensor">
+        android:layout_toRightOf="@+id/relativeLayout_paths"
+        android:layout_toEndOf="@+id/relativeLayout_paths">
 
         <RelativeLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -121,18 +104,8 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/relativeLayout_map"
-        android:layout_toLeftOf="@+id/relativeLayout_map"
-        android:id="@+id/relativeLayout_battery"
-        android:layout_alignLeft="@+id/relativeLayout_sensor">
 
-    </RelativeLayout>
-
-
-<Button
+    <Button
 style="?android:attr/buttonStyleSmall"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
@@ -142,68 +115,36 @@ android:layout_alignParentTop="true"
 android:layout_above="@+id/printIpAddress"
 android:layout_alignEnd="@+id/relativeLayout_map"
     />
-<Button
-style="?android:attr/buttonStyleSmall"
-android:id="@+id/connectButton"
-android:layout_height="wrap_content"
-android:layout_width="wrap_content"
-
-android:text="Connect"
-android:layout_above="@+id/printIpAddress"
-android:layout_toLeftOf="@+id/advopt"
-    />
 
 
-
-
-<RelativeLayout
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:id="@+id/relativeLayout_waypoint"
-android:paddingTop="10dp"
-android:paddingLeft="15dp"
-android:paddingRight="10dp"
-android:background="@drawable/border"
-android:layout_marginLeft="1dp"
-    android:layout_alignEnd="@+id/relativeLayout_map"
-    android:layout_below="@+id/relativeLayout_map"
-    android:layout_toEndOf="@+id/relativeLayout_sensor"
-    android:layout_alignParentBottom="true"
-    android:layout_marginBottom="5dp">
-
-    <TextView
+    <RelativeLayout
+        android:id="@+id/relativeLayout_sensors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/relativeLayout_map"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/relativeLayout_map"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="1dp"
+        android:layout_toEndOf="@+id/relativeLayout_paths"
+        android:background="@drawable/border"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp">
 
-        android:text="Sensor Data"
-        android:id="@+id/textView6"
-        android:layout_marginLeft="3dp"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Battery"
-        android:id="@+id/batteryTextView"
-        android:layout_marginLeft="20dp"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6"
-        android:layout_marginStart="17dp" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="3dp"
+            android:text="Sensor Data"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
 
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="0.0"
-    android:id="@+id/batteryVoltage"
-    android:layout_marginLeft="20dp"
-        android:layout_alignTop="@+id/batteryTextView"
-        android:layout_toEndOf="@+id/batteryTextView"
-        android:layout_marginStart="20dp" />
-
-    <!--<TextView-->
+        <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--style="?android:attr/textAppearanceSmall"-->
@@ -211,29 +152,29 @@ android:layout_marginLeft="1dp"
         <!--android:id="@+id/sensor1"-->
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?android:attr/textAppearanceSmall"
-        android:layout_marginRight="15dp"
-        android:id="@+id/sensortype1"
-        android:textStyle="bold"
-        android:text="Null"
-        android:layout_marginLeft="30dp"
-        android:layout_alignTop="@+id/batteryVoltage"
-        android:layout_toEndOf="@+id/batteryVoltage" />
+        <TextView
+            android:id="@+id/sensortype1"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/batteryVoltage"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/batteryVoltage"
+            android:text="Null"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:text="0.0"
-        android:id="@+id/SValue1"
-        style="?android:attr/textAppearanceSmall"
-        android:layout_alignBottom="@+id/sensortype1"
-        android:layout_toEndOf="@+id/sensortype1" />
+        <TextView
+            android:id="@+id/SValue1"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/sensortype1"
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/sensortype1"
+            android:text="0.0"/>
 
-    <!--<TextView-->
+        <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:text="Sensor 2"-->
@@ -242,30 +183,30 @@ android:layout_marginLeft="1dp"
         <!--android:layout_marginLeft="15dp"-->
         <!--android:layout_marginRight="15dp"-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:id="@+id/sensortype2"
-        style="?android:attr/textAppearanceSmall"
-        android:textStyle="bold"
-        android:text="Null"
-        android:layout_alignBottom="@+id/SValue1"
-        android:layout_toEndOf="@+id/SValue1" />
+        <TextView
+            android:id="@+id/sensortype2"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/SValue1"
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/SValue1"
+            android:text="Null"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:text="0.0"
-        android:id="@+id/SValue2"
+        <TextView
+            android:id="@+id/SValue2"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/sensortype2"
 
-        style="?android:attr/textAppearanceSmall"
-        android:layout_alignTop="@+id/sensortype2"
-        android:layout_toEndOf="@+id/sensortype2" />
-    <!--android:textSize="18dp"-->
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/sensortype2"
+            android:text="0.0"/>
+        <!--android:textSize="18dp"-->
 
-    <!--<TextView-->
+        <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:text="Sensor 3"-->
@@ -275,62 +216,152 @@ android:layout_marginLeft="1dp"
         <!--android:layout_alignTop="@+id/sensortype2"-->
         <!--style="?android:attr/textAppearanceSmall"-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:id="@+id/sensortype3"
-        style="?android:attr/textAppearanceSmall"
-        android:textStyle="bold"
-        android:text="Null"
-        android:layout_toEndOf="@+id/SValue2"
-        android:layout_alignBottom="@id/SValue2"/>
+        <TextView
+            android:id="@+id/sensortype3"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/SValue2"
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/SValue2"
+            android:text="Null"
+            android:textStyle="bold"/>
 
 
+        <TextView
+            android:id="@+id/SValue3"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/sensortype3"
+            android:layout_marginRight="15dp"
+            android:layout_toEndOf="@+id/sensortype3"
+            android:text="0.0"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:text="0.0"
-        style="?android:attr/textAppearanceSmall"
-        android:id="@+id/SValue3"
-        android:layout_alignBottom="@+id/sensortype3"
-        android:layout_toEndOf="@+id/sensortype3" />
 
+        <!--android:textSize="18dp"-->
 
-    <!--android:textSize="18dp"-->
+    </RelativeLayout>
 
-</RelativeLayout>
-
-    <ToggleButton
-
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Waypoints"
-    android:textOff="Waypoints"
-    android:textOn="Region"
-    android:id="@+id/switchviewbutton"
-        android:layout_below="@+id/relativeLayout_battery"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/relativeLayout_map" />
-
-    <TextView
-        android:background="@drawable/border"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/mapinfo"
-        style="?android:attr/textAppearanceSmall"
-        android:gravity="center_horizontal"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_above="@+id/relativeLayout_control"
-        android:layout_alignParentStart="true"
+    <RelativeLayout
+        android:id="@+id/relativeLayout_boat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/relativeLayout_paths"
         android:layout_toStartOf="@+id/relativeLayout_map"
-        android:text="Map Information" />
+        android:background="@drawable/border"
+        >
+
+        <Button
+            android:id="@+id/connectButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="Connect to boat"
+            />
+
+        <TextView
+            android:id="@+id/printIpAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/connectButton"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center"
+            android:background="@color/cyan"
+            android:gravity="center_horizontal|center_vertical"
+            android:textColor="@color/green"/>
+
+        <TextView
+            android:id="@+id/waypoints_waypointstatus"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Waypoint Status"
+            android:layout_gravity="center"
+            android:layout_below="@+id/printIpAddress"/>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_boat_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/speed_spinner">
+
+            <Button
+                android:id="@+id/start_button"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/play_button"/>
+
+            <Button
+                android:id="@+id/pause_button"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/start_button"
+                android:background="@drawable/pause_button"
+                />
+
+            <Button
+                android:id="@+id/stop_button"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@id/pause_button"
+                android:background="@drawable/stop_button"
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_battery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/waypoints_waypointstatus"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            >
+
+            <TextView
+                android:id="@+id/batteryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Battery"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"/>
+
+            <TextView
+                android:id="@+id/batteryVoltage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:text="0.0"/>
+
+
+        </RelativeLayout>
+
+        <Spinner
+            android:id="@+id/speed_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/speed_prompt"
+            android:entries="@array/spinner_speed_entries"
+            android:layout_below="@+id/relativeLayout_battery"
+            android:layout_alignParentStart="true">
+        </Spinner>
+
+    </RelativeLayout>
+
     <!--     <Button
         android:id="@+id/mapButton"
         android:layout_width="match_parent"
