--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -36,20 +36,36 @@
             android:gravity="center_horizontal|center_vertical"
             android:textColor="@color/green"/>
 
-        <TextView
-            android:id="@+id/waypoints_waypointstatus"
+        <RelativeLayout
+            android:id="@+id/relativeLayout_waypoint_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/printIpAddress"
-            android:gravity="center"
-            android:text="Waypoint status:"
-            />
+            android:layout_marginTop="10dp"
+            >
+
+            <TextView
+                android:id="@+id/waypoint_status_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="WP status:"/>
+
+            <TextView
+                android:id="@+id/waypoint_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                />
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relativeLayout_battery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/waypoints_waypointstatus"
+            android:layout_below="@+id/relativeLayout_waypoint_status"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
