--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="red">#FF0000</color>
-    <color name="green">#080000</color>
+    <color name="red">#ff0000</color>
+    <color name="magenta">#ee00ff</color>
+    <color name="purple">#9500ff</color>
+    <color name="orange">#ff9100</color>
+    <color name="yellow">#fff700</color>
     <color name="black">#000000</color>
-    <color name="asdf">#339900</color>
-    <color name="cyan">#0080FF</color>
+    <color name="green">#009908</color>
+    <color name="cyan">#00ffff</color>
+    <color name="blue">#001eff</color>
+    <color name="white">#ffffff</color>
     <color name="background_holo_dark">#ff000000</color>
     <color name="background_holo_light">#fff3f3f3</color>
 </resources>
