pulling multiboat branch into INTCATCH unstable (#61)
* Shifted GUI layout temporarily. Added spinner to select which boat you are controlling.

* Now adds markers in an intelligent way. Only one marker is shown though...

* New currentBoat() method. Now shows multiple boat markers.

* Added use of the waypoint index maps and currentBoat() method.

* Added new colorful arrow icons.

* Failed attempts to get the markers and lines to work. Needs serious rewrite.

* pull updated GUI buttons into multiboat code (#59)

* No more waypoints/region layouts. All one page. Compressing boat buttons into left.

* Added new icons. Crashes immediately, can't inflate view. Sigh...

* Now compiles, fixed lawnmower image to be proper size.

* Now ready for new internals.

* Merging the boat selection spinner into the simplified GUI layout.

* IP address box now updates with the selected boat spinner.

* Added undo last waypoint button functionality.

* Added speed spinner functionality back in.

* Included transect distance updates. Now require 3 waypoints to generate regions.

* When commanded to start waypoints, boats are assigned the unowned path and have their own Polylines.

* Added pause, resume, and stop waypoints functionality back in.

* Automatically generate colored arrows and polylines. Boat select spinner items match in color.

* Added load waypoints from file and path length display.

* Waypoint status, battery voltage, and sensor data reset when you switch selected boat.

* Removed some unused imports.

* Lines are darker shade of boat color. Boat to waypoint lines added in.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="red">#FF0000</color>
-    <color name="green">#080000</color>
+    <!--> UNUSED COLORS
+    <color name="pink">#ffa0c9</color>
+    <color name="purple">#9500ff</color>
+    <color name="blue">#001eff</color>
+    <!-->
+
+    <color name="red_light">#ff0000</color>
+    <color name="red_dark">#800000</color>
+
+    <color name="magenta_light">#f133ff</color>
+    <color name="magenta_dark">#792080</color>
+
+    <color name="cyan_light">#00ffff</color>
+    <color name="cyan_dark">#30bfbf</color>
+
+    <color name="orange_light">#ffa200</color>
+    <color name="orange_dark">#bf8f30</color>
+
+    <color name="yellow_light">#fffa66</color>
+    <color name="yellow_dark">#807c20</color>
+
+    <color name="green_light">#33ff36</color>
+    <color name="green_dark">#1f9925</color>
+
     <color name="black">#000000</color>
-    <color name="asdf">#339900</color>
-    <color name="cyan">#0080FF</color>
+    <color name="white">#ffffff</color>
+    <color name="background_holo_dark">#ff000000</color>
+    <color name="background_holo_light">#fff3f3f3</color>
 </resources>
