Changed connect dialog to allow only numbers and decimals. This saves a button press while connecting to a boat. Lightened the magenta line color. It was too close to grey.

--- a/app/src/main/res/layout/connectdialog.xml
+++ b/app/src/main/res/layout/connectdialog.xml
@@ -21,7 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="XXX.XXX.XXX.XXX"
-        android:inputType=""/>
+        android:inputType="number|numberDecimal"
+        android:digits="0123456789."
+        />
 
 
     <!--<TextView-->
