--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="red_dark">#800000</color>
 
     <color name="magenta_light">#f133ff</color>
-    <color name="magenta_dark">#792080</color>
+    <color name="magenta_dark">#b300bf</color>
 
     <color name="cyan_light">#00ffff</color>
     <color name="cyan_dark">#30bfbf</color>
