Added buttons for 4 jar Atlas pump sampler. No code written yet.

--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -184,11 +184,10 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/relativeLayout_paths"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@id/relativeLayout_boat"
         android:layout_below="@id/relativeLayout_boat"
@@ -264,6 +263,7 @@
             android:id="@+id/relativeLayout_transect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/relativeLayout_path_buttons"
             android:layout_marginTop="10dp">
 
             <TextView
@@ -291,7 +291,9 @@
             android:id="@+id/relativeLayout_path_length"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@id/relativeLayout_transect">
 
             <TextView
                 android:id="@+id/path_length_label"
@@ -307,8 +309,130 @@
                 android:layout_alignParentRight="true"
                 android:text="0"/>
         </RelativeLayout>
-    </LinearLayout>
 
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout_sampler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@id/relativeLayout_paths"
+        android:layout_below="@id/relativeLayout_paths">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_sampler_jar1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp">
+
+            <Button
+                android:id="@+id/jar1_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/jar_1"
+                />
+
+            <Chronometer
+                android:id="@+id/jar1_chrono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/jar1_button"
+                android:layout_centerHorizontal="true"
+                android:countDown="true"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_sampler_jar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@id/relativeLayout_sampler_jar1">
+
+            <Button
+                android:id="@+id/jar2_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/jar_2"/>
+
+            <Chronometer
+                android:id="@+id/jar2_chrono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/jar2_button"
+                android:layout_centerHorizontal="true"
+                android:countDown="true"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_sampler_jar3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relativeLayout_sampler_jar1"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp">
+
+
+            <Button
+                android:id="@+id/jar3_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/jar_3"
+                />
+
+            <Chronometer
+                android:id="@+id/jar3_chrono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/jar3_button"
+                android:layout_centerHorizontal="true"
+                android:countDown="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_sampler_jar4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relativeLayout_sampler_jar1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/relativeLayout_sampler_jar3">
+
+            <Button
+                android:id="@+id/jar4_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/jar_4"/>
+            <Chronometer
+                android:id="@+id/jar4_chrono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/jar4_button"
+                android:layout_centerHorizontal="true"
+                android:countDown="true"/>
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/sampler_reset_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/relativeLayout_sampler_jar4"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/reset"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/relativeLayout_map"
